fix issue with multiple scrollbars

--- a/docs/style.css
+++ b/docs/style.css
@@ -38,7 +38,6 @@ html,
 body {
   overscroll-behavior-y: none;
   scroll-behavior: smooth;
-  overflow-x: hidden;
   margin: 0;
   background-color: darkblue;
   font-family: Nunito;
@@ -46,10 +45,6 @@ body {
   color: lightgray;
   transition: filter 1s;
   -webkit-touch-callout: none !important;
-}
-
-body.full {
-  overflow: hidden;
 }
 
 canvas {
@@ -267,7 +262,7 @@ footer {
   position: relative;
   bottom: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   max-height: 250px;
   background-color: darkblue;
   margin: none !important;
@@ -365,6 +360,7 @@ main.front {
   width: 800px;
   max-width: 90vw;
   margin: auto;
+  height: 100%;
 }
 
 h2.front {
@@ -1228,6 +1224,7 @@ main.qr__container {
   opacity: 0.3;
 }
 
+/* ⚝ Uncomment to debug */
 main.splash {
   flex-grow: 1;
   overflow: hidden;
