--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -53,7 +53,7 @@ footer {
     position:relative;
     bottom:0;
     left:0;
-    width:100vw;
+    width:100%;
     max-height: 250px;
     background-color:$background;
     margin:none!important;
