--- a/src/scss/layout/instructions.scss
+++ b/src/scss/layout/instructions.scss
@@ -1,9 +1,5 @@
 /* ⚝ Instructions */
 
-*{
-    // outline:solid green;
-}
-
 .break {
     flex-basis: 100%;
     height: 0;
