--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,12 @@
 
 @import "qr", "map";
 
+/* ⚝ Uncomment to debug */
+* {
+  // outline:solid green;
+}
+
+
 
 main.splash {
     flex-grow: 1;
